project/stage/tests/accept/if.ul
int main(){
  if(thing){
    _otherThing;
  }
}