project/stage/tests/reject/reject_digit_ident.ul
void main(){
  int not2b
  int 2b;
}